# the-critic

./: .gitignore  LICENSE  README.md  example.env  pyproject.toml
the_critic/: analyzer.py  capture.py  main.py  text_to_speech.py
